Bug 771403 - Update libjpeg-turbo to version 1.2.1. r=jlebar